fix bug in undistortPoint

--- a/Arena/data_stuff.ipynb
+++ b/Arena/data_stuff.ipynb
@@ -46,147 +46,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 25,
+   "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "skipped ../../Pogona_Pursuit/Arena/experiments/initial_20200727T071226, ignored word\n",
-      "skipped ../../Pogona_Pursuit/Arena/experiments/initial_20200727T073708, ignored word\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/bug_size_20200727T080358 trial1\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/bug_size_20200727T080358 trial2\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/bug_size_20200727T080358 trial3\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/bug_size_20200727T080358 trial4\n",
-      "skipped ../../Pogona_Pursuit/Arena/experiments/fps_check_20200727T083454, ignored word\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/test_20200727T100404 trial1\n",
-      "skipped ../../Pogona_Pursuit/Arena/experiments/test_fps_20200727T102701, ignored word\n",
-      "skipped ../../Pogona_Pursuit/Arena/experiments/fps_check_20200727T105124, ignored word\n",
-      "skipped ../../Pogona_Pursuit/Arena/experiments/fps_check_20200727T110833, ignored word\n",
-      "skipped ../../Pogona_Pursuit/Arena/experiments/delete_20200727T161744, ignored word\n",
-      "skipped ../../Pogona_Pursuit/Arena/experiments/initial_20200729T071920, ignored word\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/worm_20200729T074653 trial1\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/worm_20200729T074653 trial2\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/worm_20200729T074653 trial3\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/worm_20200729T075548 trial1\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/worm_20200729T075548 trial2\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/worm_20200729T075548 trial3\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/cockroach_20200729T084031 trial1\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/cockroach_20200729T084031 trial2\n",
-      "skipped ../../Pogona_Pursuit/Arena/experiments/vegetables_20200729T084925, ignored word\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/worm_20200729T090421 trial1\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/worm_20200729T090421 trial2\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/worm_20200729T090421 trial3\n",
-      "skipped ../../Pogona_Pursuit/Arena/experiments/vegetables_20200729T092014, ignored word\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/fast_cockroach_20200729T094929 trial1\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/fast_cockroach_20200729T094929 trial2\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/fast_cockroach_20200729T094929 trial3\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/cockroach_20200729T101509 trial1\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/cockroach_20200729T101509 trial2\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/cockroach_20200729T101509 trial3\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/worm_20200729T103122 trial1\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/worm_20200729T103122 trial2\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/worm_20200729T103122 trial3\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/fast_cockroach_20200729T105342 trial1\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/fast_cockroach_20200729T105342 trial2\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/fast_cockroach_20200729T105342 trial3\n",
-      "skipped ../../Pogona_Pursuit/Arena/experiments/vegetables_20200729T111144, ignored word\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/fast_cockroach_20200729T093829 trial1\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/fast_cockroach_20200729T093829 trial2\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/circle_20200730T115819 trial1\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/circle_20200730T115819 trial2\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/circle_20200730T120805 trial1\n",
-      "skipped ../../Pogona_Pursuit/Arena/experiments/circle_20200730T120821, no experiment log file\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/circle_20200730T113527 trial1\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/circle_20200730T113527 trial2\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/circle_20200730T124208 trial1\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/circle_20200730T124208 trial2\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/circle_worm_20200730T125503 trial1\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/circle_worm_20200730T125503 trial2\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/fast_cockroach_line_20200730T131606 trial1\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/fast_cockroach_line_20200730T131606 trial2\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/circle_20200730T133208 trial1\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/circle_20200730T133208 trial2\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/circle_20200803T075244 trial1\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/circle_20200803T075244 trial2\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/circle_20200803T075733 trial1\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/circle_20200803T075733 trial2\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/line_20200803T081041 trial1\n",
-      "skipped ../../Pogona_Pursuit/Arena/experiments/test-no-streaming-4_20200810T115814, ignored word\n",
-      "skipped ../../Pogona_Pursuit/Arena/experiments/test-no-streaming-rt-only_20200810T120030, ignored word\n",
-      "ignored ../../Pogona_Pursuit/Arena/experiments/fast_20200819T085841 trial1, 800 != 1440\n",
-      "ignored ../../Pogona_Pursuit/Arena/experiments/fast_20200819T093920 trial1, 800 != 1440\n",
-      "ignored ../../Pogona_Pursuit/Arena/experiments/circle_20200819T102503 trial1, 800 != 1440\n",
-      "ignored ../../Pogona_Pursuit/Arena/experiments/worm_20200819T103031 trial1, 800 != 1440\n",
-      "ignored ../../Pogona_Pursuit/Arena/experiments/worm_20200819T104454 trial1, 800 != 1440\n",
-      "ignored ../../Pogona_Pursuit/Arena/experiments/worm_20200819T105608 trial1, 800 != 1440\n",
-      "ignored ../../Pogona_Pursuit/Arena/experiments/red_beetle_20200824T073952 trial1, 800 != 1440\n",
-      "ignored ../../Pogona_Pursuit/Arena/experiments/red_beetle_20200824T074504 trial1, 800 != 1440\n",
-      "ignored ../../Pogona_Pursuit/Arena/experiments/red_beetle_20200824T075143 trial1, 800 != 1440\n",
-      "ignored ../../Pogona_Pursuit/Arena/experiments/red_beetle_20200824T075929 trial1, 800 != 1440\n",
-      "ignored ../../Pogona_Pursuit/Arena/experiments/red_beetle_20200824T081122 trial1, 800 != 1440\n",
-      "ignored ../../Pogona_Pursuit/Arena/experiments/red_beetle_20200824T082352 trial1, 800 != 1440\n",
-      "ignored ../../Pogona_Pursuit/Arena/experiments/cockroach_20200824T083436 trial1, 800 != 1440\n",
-      "ignored ../../Pogona_Pursuit/Arena/experiments/cockroach_20200824T105816 trial1, 800 != 1440\n",
-      "ignored ../../Pogona_Pursuit/Arena/experiments/red_beetle_20200824T120948 trial1, 800 != 1440\n",
-      "ignored ../../Pogona_Pursuit/Arena/experiments/red_beetle_20200824T122233 trial1, 800 != 1440\n",
-      "ignored ../../Pogona_Pursuit/Arena/experiments/red_beetle_20200824T122233 trial2, 800 != 1440\n",
-      "ignored ../../Pogona_Pursuit/Arena/experiments/black beetle_20200824T124912 trial1, 800 != 1440\n",
-      "skipped ../../Pogona_Pursuit/Arena/experiments/sleepy_20200824T154032, ignored word\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/black_beetle_20200826T075854 trial1\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/black_beetle_20200826T080327 trial1\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/red_beetle_20200826T133947 trial1\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/red_beetle_20200826T133947 trial2\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/worm_20200826T134603 trial1\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/worm_20200826T135440 trial1\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/worm_20200826T135440 trial2\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/predictor_20200826T140839 trial1\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/predictor_20200826T141406 trial1\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/predictor_20200826T142338 trial1\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/predictor_20200826T154732 trial1\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/predictor_20200826T165024 trial1\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/predictor_20200826T165614 trial1\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/predictor_20200826T173639 trial1\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/predictor_20200826T174032 trial1\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/forecasts_20200826T175212 trial1\n",
-      "skipped ../../Pogona_Pursuit/Arena/experiments/delete_20200826T200311, ignored word\n",
-      "skipped ../../Pogona_Pursuit/Arena/experiments/delete_20200826T201111, ignored word\n",
-      "skipped ../../Pogona_Pursuit/Arena/experiments/delete_20200826T201338, ignored word\n",
-      "skipped ../../Pogona_Pursuit/Arena/experiments/delete_20200826T201438, ignored word\n",
-      "skipped ../../Pogona_Pursuit/Arena/experiments/delete_20200826T202709, ignored word\n",
-      "skipped ../../Pogona_Pursuit/Arena/experiments/delete_20200826T203637, ignored word\n",
-      "skipped ../../Pogona_Pursuit/Arena/experiments/delete_20200826T204212, ignored word\n",
-      "skipped ../../Pogona_Pursuit/Arena/experiments/delete_20200826T204215, ignored word\n",
-      "skipped ../../Pogona_Pursuit/Arena/experiments/delete_20200826T204331, ignored word\n",
-      "skipped ../../Pogona_Pursuit/Arena/experiments/delete_20200826T204836, ignored word\n",
-      "skipped ../../Pogona_Pursuit/Arena/experiments/delete_20200826T205501, ignored word\n",
-      "skipped ../../Pogona_Pursuit/Arena/experiments/delete_20200826T205741, ignored word\n",
-      "skipped ../../Pogona_Pursuit/Arena/experiments/delete_20200826T210457, ignored word\n",
-      "skipped ../../Pogona_Pursuit/Arena/experiments/delete_20200830T105934, ignored word\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/cockroach_line_20200830T115811 trial1\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/cockroach_line_20200830T120130 trial1\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/worm_line_20200830T120451 trial1\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/worm_line_20200830T121513 trial1\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/worm_line_20200830T121825 trial1\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/worm_circle_20200830T122241 trial1\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/worm_line_20200830T122932 trial1\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/cockroach_circle_20200830T123508 trial1\n",
-      "did not find files in ../../Pogona_Pursuit/Arena/experiments/beetle_fast_line_20200830T124020 trial1\n",
-      "Finished, loaded 25 trials\n",
-      "Detector initiated successfully\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/user/miniconda/envs/py36/lib/python3.6/site-packages/ipykernel_launcher.py:22: PerformanceWarning: indexing past lexsort depth may impact performance.\n"
+     "ename": "AttributeError",
+     "evalue": "module 'Prediction.calibration' has no attribute 'calibrate'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-25-a385038e188f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mmapx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmapy\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mroi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnewcameramtx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcalib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_undistort_mapping\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1440\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1080\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0maff\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maff_im\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcalib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcalibrate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcalib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mundistort_image\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mim\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmapx\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmapy\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m df = dataset.get_unified_dataframe(vid_dims = (1440,1080), \n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'Prediction.calibration' has no attribute 'calibrate'"
      ]
     }
    ],
@@ -563,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1570,11 +1441,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mapping, _, _ = calib.get_undistort_mapping(1440,1080)"
+    "mapping, _, newcammat = calib.get_undistort_mapping(1440,1080)"
    ]
   },
   {
@@ -1588,7 +1459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1597,7 +1468,7 @@
        "<module 'Prediction.predictor' from '/app/Pogona_realtime/Arena/Prediction/predictor.py'>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1609,7 +1480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1618,7 +1489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1641,7 +1512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1650,7 +1521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1659,16 +1530,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f2a2ece1940>"
+       "<matplotlib.image.AxesImage at 0x7f2a21007da0>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1691,7 +1562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1700,16 +1571,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f2a210952e8>"
+       "<matplotlib.image.AxesImage at 0x7f2a20f76240>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1732,22 +1603,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(None, None, None)"
+       "array([3124.88503824, 3148.91737701, 3125.3956572 , 3150.45673698])"
       ]
      },
-     "execution_count": 230,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "hit_pred.handle_frame(img)"
+    "hit_pred.correct_detection(np.array([0.22, 543.435, 0.435, 234.43]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(nan, nan)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mapping, _, newcammat = calib.get_undistort_mapping(1440,1080)\n",
+    "calib.undistort_point([0,np.nan], newcammat)"
    ]
   },
   {
@@ -1755,7 +1647,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "hitp "
+   ]
   }
  ],
  "metadata": {
