update recent changes

--- a/Arena/pogona_visualize.ipynb
+++ b/Arena/pogona_visualize.ipynb
@@ -1217,6 +1217,42 @@
     "    #plt.xlim(0,WIDTH)\n",
     "    #plt.ylim(800,np.max(events.centroid_y)+20)\n",
     "\n",
+    "    #plt.legend()\n",
+    "    \n",
+    "def draw_hit_events2(events,n=None):\n",
+    "    \"\"\"\n",
+    "    Gets an multiindex dataframe of hit events (k frames leading to a touch on screen)\n",
+    "    and draws a smaple or all of the events\n",
+    "    \"\"\"\n",
+    "    import warnings\n",
+    "    #warnings.filterwarnings(action='once')\n",
+    "    warnings.filterwarnings('ignore')\n",
+    "    #warnings.filterwarnings('default')\n",
+    "    \n",
+    "    WIDTH =  1440\n",
+    "    HEIGHT = 1080\n",
+    "    \n",
+    "    if n is not None:\n",
+    "        events_inds = np.random.choice(events.index.unique(),size = n)\n",
+    "    else:\n",
+    "        events_inds = events.index.unique()\n",
+    "    num_events = events_inds.shape[0]\n",
+    "\n",
+    "    plt.figure(figsize=(12,8),dpi=110)\n",
+    "    \n",
+    "    # TODO: use LineCollection instead\n",
+    "    for i,event in enumerate(events_inds):\n",
+    "        df = events.loc[event]\n",
+    "        mask = df.is_touch\n",
+    "        maxy = np.max(df[mask].y2)\n",
+    "        colors = np.arange(df.shape[0])\n",
+    "        plt.plot(df.x2, df.y2, color='k')\n",
+    "        plt.scatter(df.x2, df.y2, cmap='spring', c=colors, label='prev', s=100)\n",
+    "        plt.scatter(df[mask].x2,df[mask].y2, color='y', label='hits', s=140, edgecolors='k')\n",
+    "\n",
+    "    #plt.xlim(0,WIDTH)\n",
+    "    #plt.ylim(800,np.max(events.centroid_y)+20)\n",
+    "\n",
     "    #plt.legend()"
    ]
   },
