save parameters to json; move notebooks; fix libdarknet.so

--- a/Arena/Prediction/notebooks/data_stuff.ipynb
+++ b/Arena/Prediction/notebooks/data_stuff.ipynb
@@ -2,13 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.chdir('/app/Pogona_realtime/Arena')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
     "import glob\n",
-    "import os\n",
     "import numpy as np\n",
     "import imp\n",
     "import matplotlib.pyplot as plt\n",
