--- a/Arena/Prediction/notebooks/pogona_visualize.ipynb
+++ b/Arena/Prediction/notebooks/pogona_visualize.ipynb
@@ -9,6 +9,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.chdir('/app/Pogona_realtime/Arena')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [],
@@ -18,7 +28,6 @@
     "from torchvision import transforms\n",
     "import re\n",
     "import glob\n",
-    "import os\n",
     "import numpy as np\n",
     "import imp\n",
     "import matplotlib.pyplot as plt\n",
