--- a/Arena/Prediction/notebooks/misc.ipynb
+++ b/Arena/Prediction/notebooks/misc.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.chdir('/app/Pogona_realtime/Arena')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
