bug fix; change hit visualization

--- a/Arena/Prediction/notebooks/predictor_evaluate.ipynb
+++ b/Arena/Prediction/notebooks/predictor_evaluate.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
        "<module 'Prediction.traj_models' from '/app/Pogona_realtime/Arena/Prediction/traj_models.py'>"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,13 +103,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3b78ddddf0434480ac310b653a2c48f7",
+       "model_id": "2d6804e27e4a46bba4842d9f96028075",
        "version_major": 2,
        "version_minor": 0
       },
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,8 @@
     "#model_names = ['RNN_GRU_1023-1208_i20_o20_h32_l1', 'RNN_GRU_1023-1259_i20_o20_h200_l2', 'RNN_GRU_1023-1309_i20_o20_h600_l3'][:1]\n",
     "#model_names = ['RNN_GRU_1023-1701_i20_o20_h350_l1_RealExtreme', \n",
     "#               'RNN_GRU_1023-1551_i20_o20_h350_l1_NoMask','RNN_GRU_1022-2019_i20_o20_h350_l1_long'][-1:]\n",
-    "model_names = ['Linear_GRU_1022-1056_i20_o20_h350_l1', 'RNN_GRU_1023-1701_i20_o20_h350_l1_RealExtreme']"
+    "#model_names = ['Linear_GRU_1022-1056_i20_o20_h350_l1', 'RNN_GRU_1023-1701_i20_o20_h350_l1_RealExtreme']\n",
+    "model_names = ['RNN_GRU_1022-2019_i20_o20_h350_l1_long', 'RNN_GRU_1023-1701_i20_o20_h350_l1_RealExtreme']"
    ]
   },
   {
@@ -417,12 +418,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 425,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "# use masking dict that model was trained on\n",
-    "mask_dict = seq2seq_models[-1].model_params['masking_params']"
+    "mask_dict = seq2seq_models[0].model_params['masking_params']"
    ]
   },
   {
@@ -457,7 +458,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f38d0ad8d825433581dcaf8987207e26",
+       "model_id": "884b0851c16d4865bd181f7f99dbba16",
        "version_major": 2,
        "version_minor": 0
       },
@@ -551,9 +552,9 @@
    "outputs": [],
    "source": [
     "# use existing split from the model\n",
-    "train_trials = seq2seq_models[-1].model_params['training_params']['train_trials']\n",
-    "val_trials = seq2seq_models[-1].model_params['training_params']['val_trials']\n",
-    "test_trials = seq2seq_models[-1].model_params['training_params']['test_trials']"
+    "train_trials = seq2seq_models[0].model_params['training_params']['train_trials']\n",
+    "val_trials = seq2seq_models[0].model_params['training_params']['val_trials']\n",
+    "test_trials = seq2seq_models[0].model_params['training_params']['test_trials']"
    ]
   },
   {
@@ -573,9 +574,9 @@
      "output_type": "stream",
      "text": [
       "Sample size:\n",
-      "Training: 159 trials, 819222 seqs\n",
-      "Validation: 32 trials, 175915 seqs\n",
-      "Test: 32 trials, 163108 seqs\n"
+      "Training: 159 trials, 813644 seqs\n",
+      "Validation: 32 trials, 161626 seqs\n",
+      "Test: 32 trials, 182975 seqs\n"
      ]
     }
    ],
@@ -604,14 +605,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Combined memory of X and Y tensors: 99.6 MB\n"
+      "Combined memory of X and Y tensors: 111.7 MB\n"
      ]
     }
    ],
@@ -625,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -636,13 +637,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ea8eef51fa094fbea2f2236650c45d20",
+       "model_id": "3f371645a23e4b678427d1387365e7da",
        "version_major": 2,
        "version_minor": 0
       },
@@ -806,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -837,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -851,27 +852,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/user/miniconda/envs/py37/lib/python3.7/site-packages/ipywidgets/widgets/widget.py:412: DeprecationWarning: Passing unrecoginized arguments to super(Canvas).__init__().\n",
-      "__init__() missing 1 required positional argument: 'figure'\n",
-      "This is deprecated in traitlets 4.2.This error will be raised in a future release of traitlets.\n",
-      "  super(Widget, self).__init__(**kwargs)\n",
-      "/home/user/miniconda/envs/py37/lib/python3.7/site-packages/ipywidgets/widgets/widget.py:412: DeprecationWarning: Passing unrecoginized arguments to super(Toolbar).__init__().\n",
-      "__init__() missing 1 required positional argument: 'canvas'\n",
-      "This is deprecated in traitlets 4.2.This error will be raised in a future release of traitlets.\n",
-      "  super(Widget, self).__init__(**kwargs)\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8671c96ec5d14bb19967cd7da72a7fef",
+       "model_id": "cb70ed8c691d424bab11c33bd6e8b2c2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -885,10 +872,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f1e76c28650>"
+       "<matplotlib.legend.Legend at 0x7fb99d80e850>"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1189,7 +1176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1404,11 +1391,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
-    "trial = test_trials[2]\n",
+    "test_fast_trials = ['learning_20200917T152238_trial2', 'learning_20201001T084647_trial1',\n",
+    "                   'circle_20200803T090615_trial1', 'circle_20201019T094116_trial1']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trial = test_fast_trials[1]\n",
     "\n",
     "homography = dataset.homography_for_trial(trial)\n",
     "correction_fn = visualize.get_correction_fn(homography,1920)\n",
@@ -1426,18 +1423,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e5349d1d774f46069022b189f08f90ec",
+       "model_id": "53d09bb300f74077a477690af4042294",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=500.0), HTML(value='')))"
+       "HBox(children=(FloatProgress(value=0.0, max=923.0), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -1453,19 +1450,19 @@
    ],
    "source": [
     "# parameters\n",
-    "y_thresh = 0\n",
-    "start_frame = 2000\n",
-    "end_frame = 2500\n",
+    "y_thresh = 10\n",
+    "start_frame = 0\n",
+    "end_frame = None\n",
     "colors = [(0,255,0), (255,255, 0), (0,255,255)]  # bgr colors\n",
     "past_color = (255, 0, 0)\n",
     "future_color = (0, 0, 255)\n",
     "dot_radius = 4\n",
     "line_thickness = 2\n",
-    "video_width = 960\n",
-    "out_path = f'../labelled/{trial}_test_video.mp4'\n",
+    "video_width = 1280\n",
+    "out_path = f'../labelled/{trial}_preds.mp4'\n",
     "############\n",
     "\n",
-    "hit_predictors = [predictor.HitPredictor(p, None, prediction_y_threshold=y_thresh) for p in seq2seq_models + [kalman_predictor]]\n",
+    "hit_predictors = [predictor.HitPredictor(p, None, prediction_y_threshold=y_thresh) for p in [kalman_predictor] + seq2seq_models]\n",
     "bboxes = all_df.loc[trial][['x1', 'y1', 'x2', 'y2']].values\n",
     "num_frames = end_frame - start_frame if end_frame is not None else None\n",
     "\n",
@@ -1474,6 +1471,7 @@
     "        p, \n",
     "        bboxes, \n",
     "        prediction_color=c,\n",
+    "        hit_color=c,\n",
     "        dot_radius=dot_radius,\n",
     "        line_thickness=line_thickness) for p, c in zip(hit_predictors, colors)\n",
     "]\n",
